syntax = "proto3";
package go.micro.srv.user;
service UserService {
    // 创建用户
    rpc Create(User) returns (Response) {}
    // 查询用户
    rpc Get(User) returns (Response) {}
    // 查询所有用户
    rpc GetAll(Request) returns (Response) {}
    // 验证用户, 获取token
    rpc Auth(User) returns (Token) {}
    // 验证token
    rpc ValidateToken(Token) returns (Token) {}
}

message User {
    string id = 1;
    string name = 2;
    string company = 3;
    string email = 4;
    string password = 5;
}

message Request {}

message Response {
    User user = 1;
    repeated User users = 2;
    repeated Error errors = 3;
}
message Token {
    string token = 1;
    bool valid = 2;
    repeated Error errors = 3;
}
message Error {
    int32 code = 1;
    string description = 2;
}